Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96603

QTextDocument: stylesheet border-color for td applied only to first td

    XMLWordPrintable

Details

    • 8513bcd90cc3900f9c32e59e0823f621ea6eea1d (qt/qtbase/dev) 9a733dabc8c6e75cc2b1668a58671fd148728acc (qt/qtbase/6.2)

    Description

      With a simple stylesheet of:

      td {border-color: #FF0000;border-style: solid;border-width: 2px;}
      

      the border-color #FF0000 seems only to be applied to the first td in a html document consisting of a table, few rows & table cells.

      Steps to reproduce the problem:

      1. Run the attached project

      Small addition: it's apparently not only td that's affected, TH has the same problem. Also this thing seems to be fixed by marking color for each segment of the border separately:

      border-top-color: red;
      border-bottom-color: red;
      border-left-color: red;
      border-right-color: red;

      Attachments

        1. qtbug96603.zip
          0.7 kB
          Miika Pernu
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes